--- a/src/components/wrap-elem/WrapElem.module.css
+++ b/src/components/wrap-elem/WrapElem.module.css
@@ -4,13 +4,6 @@
   height: 100%;
 }
 
-.container h1 {
-  position: absolute;
-  left: 20px;
-  bottom: 40px;
-  z-index: 35;
-}
-
 .imgContainer {
   width: 100%;
   height: 100%;
@@ -25,7 +18,11 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0) 40%, #212734 100%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0) -20%,
+    #212734 100%
+  );
 }
 
 .imgContainer::after {
