--- a/src/components/main-page/MainPage.module.css
+++ b/src/components/main-page/MainPage.module.css
@@ -1,3 +1,11 @@
 .container {
   min-height: 200vh;
 }
+
+.options {
+  display: flex;
+  justify-content: space-between;
+
+  margin-top: 40px;
+  padding: 0 50px;
+}
