--- a/src/components/UI/select/MySelect.module.css
+++ b/src/components/UI/select/MySelect.module.css
@@ -2,7 +2,6 @@
   width: min-content;
   min-width: 110px;
   min-height: 35px;
-  margin-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,6 +21,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.2s linear;
+}
+
+.default:hover {
+  filter: brightness(0.85);
 }
 
 .default::after {
