--- a/src/components/sort/Sort.module.css
+++ b/src/components/sort/Sort.module.css
@@ -2,7 +2,6 @@
   display: flex;
   position: relative;
   width: 180px;
-  height: 35px;
   justify-content: center;
   font-size: 16px;
   color: #d9d9d9;
@@ -29,7 +28,6 @@
   transform: rotate(90deg);
   filter: invert(1);
   position: absolute;
-  top: calc(50% - 12px);
   right: -12px;
   transition: all 0.2s linear;
   z-index: 4;
@@ -51,6 +49,10 @@
 
 .open .default::after {
   transform: rotate(-90deg);
+}
+
+.text {
+  height: 35px;
 }
 
 .text,
