--- a/src/components/wrapper/Wrapper.module.css
+++ b/src/components/wrapper/Wrapper.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .container {
   /* display: flex; */
   width: 100%;
@@ -5,6 +7,7 @@
   position: relative;
   color: #fff;
   overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .wrapInner {
@@ -17,6 +20,7 @@
 
 .btnContainer {
   width: 60px;
+  height: 64px;
   position: absolute;
   right: 20px;
   bottom: 40px;
@@ -28,6 +32,7 @@
 .btn {
   background-color: #414f57;
   width: 100%;
+  height: 32px;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -42,5 +47,7 @@
 
 .btnImage {
   filter: invert(1);
-  width: 32px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
