--- a/src/components/list/List.module.css
+++ b/src/components/list/List.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 40px;
   padding: 0 50px;
   display: flex;
   justify-content: center;
@@ -21,6 +21,7 @@
   cursor: pointer;
   transition: all 0.2s linear;
   text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .btn:hover {
