--- a/src/components/comments-container/Comments.module.css
+++ b/src/components/comments-container/Comments.module.css
@@ -1,10 +1,10 @@
 .container {
   width: 100%;
-  margin-top: 40px;
-  padding: 0 50px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  background-color: #303b46e8;
+  margin: 40px 0px;
+  padding: 20px;
+  padding-bottom: 0px;
+  border-radius: 10px;
 }
 
 .btn {
@@ -26,12 +26,4 @@
 
 .btn:hover {
   box-shadow: 0px 0px 3px rgb(105, 209, 174);
-}
-
-.spinnerContainer {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
