--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,5 +1,6 @@
 .about {
-  width: 300px;
+  width: 100%;
+  height: fit-content;
   color: #fff;
   border-radius: 10px;
   text-align: left;
@@ -16,11 +17,13 @@
   padding-bottom: 10px;
   border-bottom: 1px solid #c0bdbd;
   margin-bottom: 10px;
+  color: aquamarine;
 }
 .about p {
   white-space: pre-line;
   text-align: left;
   margin-bottom: 1rem;
+  overflow: hidden;
 }
 
 .waifu {
@@ -28,4 +31,5 @@
   height: 20px;
   border-radius: 3px;
   margin-right: 5px;
+  object-fit: cover;
 }
