--- a/src/components/comment/Comment.module.css
+++ b/src/components/comment/Comment.module.css
@@ -11,6 +11,13 @@
   width: var(--wh);
   height: var(--wh);
   box-shadow: 0px 0px 5px #000;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.imgContainer img:hover {
+  filter: brightness(0.9);
+  box-shadow: 0px 0px 15px #000;
 }
 
 .infoContainer {
