--- a/src/components/user-comments-list/UserCommentsList.module.css
+++ b/src/components/user-comments-list/UserCommentsList.module.css
@@ -2,3 +2,22 @@
   width: 700px;
   min-height: 100vh;
 }
+
+.btn {
+  padding: 8px 40px;
+  font-size: 14px;
+  font-weight: 600;
+  background-color: aquamarine;
+  border-radius: 5px;
+  border: 0;
+  outline: 0;
+  transition: all 0.2s ease;
+  box-shadow: 0px 0px 10px rgb(105, 209, 174);
+  cursor: pointer;
+  transition: all 0.2s ease;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.btn:hover {
+  box-shadow: 0px 0px 3px rgb(105, 209, 174);
+}
