--- a/src/components/user-wallpaper/UserWallpaper.module.css
+++ b/src/components/user-wallpaper/UserWallpaper.module.css
@@ -77,6 +77,7 @@
 .btn {
   padding: 8px 40px;
   font-size: 14px;
+  font-weight: 600;
   background-color: aquamarine;
   border-radius: 5px;
   border: 0;
