--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,19 @@
   text-decoration: none;
   margin: 15px 30px;
 }
+
+@media (max-width: 1000px) {
+  .link {
+    margin: 15px 15px;
+  }
+}
+@media (max-width: 600px) {
+  .link {
+    margin: 10px 5px;
+  }
+}
+@media (max-width: 500px) {
+  .link {
+    margin: 10px 0px;
+  }
+}
