--- a/src/components/categories/Categories.module.css
+++ b/src/components/categories/Categories.module.css
@@ -4,3 +4,14 @@
   margin-top: 60px;
   padding: 0 20px;
 }
+
+@media (max-width: 1000px) {
+  .container {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    margin-top: 10px;
+  }
+}
