--- a/src/components/comments-container/Comments.module.css
+++ b/src/components/comments-container/Comments.module.css
@@ -27,3 +27,11 @@
 .btn:hover {
   box-shadow: 0px 0px 3px rgb(105, 209, 174);
 }
+
+@media (max-width: 500px) {
+  .container {
+    width: calc(100% - 20px);
+    margin: auto;
+    margin-bottom: 50px;
+  }
+}
