--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -80,3 +80,37 @@
   height: 320px;
   padding-top: 20px;
 }
+
+@media (max-width: 800px) {
+  .form {
+    margin-right: 15px;
+  }
+}
+@media (max-width: 600px) {
+  .form {
+    width: 250px;
+  }
+}
+@media (max-width: 500px) {
+  .form {
+    width: 150px;
+  }
+  .btn {
+    width: 20px;
+    height: 20px;
+    top: calc(50% - 10px);
+  }
+  .input::placeholder {
+    font-size: 10px;
+  }
+  .input {
+    font-size: 10px;
+    padding: 0px 10px;
+    height: 25px;
+    min-height: 1px;
+  }
+  .open {
+    height: 248px;
+    padding-top: 7px;
+  }
+}
