--- a/src/components/list-elem/ListElem.module.css
+++ b/src/components/list-elem/ListElem.module.css
@@ -19,7 +19,35 @@
   width: 100%;
   height: 300px;
   overflow: hidden;
+  position: relative;
 }
+
+.imgContainer::after {
+  content: '';
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(
+    0deg,
+    #3a4750 0,
+    rgba(32, 33, 37, 0) 50%,
+    #3a4750 100%
+  );
+}
+.imgContainer::before {
+  content: '';
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0) 60%, #3a4750 100%);
+}
+/* #7993cc */
 
 .img {
   width: 100%;
@@ -57,6 +85,13 @@
   margin-bottom: 40px;
 }
 
+.info p {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+}
+
 .icons {
   width: 20px;
   height: 20px;
@@ -75,4 +110,37 @@
   align-items: center;
   justify-content: center;
   padding: 0 5px;
+}
+
+@media (max-width: 750px) {
+  .elem {
+    width: 170px;
+  }
+  .imgContainer {
+    height: 250px;
+  }
+  .mainContent {
+    font-size: 13px;
+    height: calc(100% - 250px);
+  }
+  .text {
+    font-size: 12px;
+  }
+}
+@media (max-width: 600px) {
+  .elem {
+    width: 150px;
+  }
+  .imgContainer {
+    height: 230px;
+  }
+  .mainContent {
+    font-size: 13px;
+    height: calc(100% - 230px);
+  }
+  .text {
+    font-size: 12px;
+  }
+}
+@media (max-width: 500px) {
 }
