--- a/src/components/multiRangeSlider/MultiRangeSlider.module.css
+++ b/src/components/multiRangeSlider/MultiRangeSlider.module.css
@@ -12,7 +12,6 @@
 
 .slider__track,
 .slider__range,
-.slider__leftValue,
 .slider__rightValue {
   position: absolute;
 }
@@ -34,15 +33,19 @@
   z-index: 2;
 }
 
-.slider__leftValue,
 .slider__rightValue {
   color: #dee2e6;
   font-size: 12px;
   margin-top: 20px;
 }
 
-.slider__leftValue {
-  left: 6px;
+@media (max-width: 1000px) {
+  .container {
+    margin-bottom: 10px;
+  }
+  .slider__rightValue {
+    margin-top: 12px;
+  }
 }
 
 .slider__rightValue {
@@ -98,4 +101,30 @@
   margin-top: 4px;
   pointer-events: all;
   position: relative;
+}
+
+@media (max-width: 500px) {
+  .container {
+    justify-content: flex-start;
+  }
+  .slider,
+  .thumb {
+    width: 100px;
+  }
+  .thumb::-webkit-slider-thumb {
+    width: 9px;
+    height: 9px;
+  }
+  .thumb::-moz-range-thumb {
+    width: 9px;
+    height: 9px;
+  }
+  .slider__track,
+  .slider__range {
+    border-radius: 3px;
+    height: 3px;
+  }
+  .slider__rightValue {
+    font-size: 8px;
+  }
 }
