--- a/src/components/search-elem/SearchElem.module.css
+++ b/src/components/search-elem/SearchElem.module.css
@@ -40,3 +40,24 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 500px) {
+  .imgContainer {
+    width: 40px;
+    height: 60px;
+  }
+  .infContainer {
+    width: calc(100% - 40px);
+  }
+  .name,
+  .inf {
+    font-size: 13px;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
+  }
+  .status {
+    margin: 2px 0px;
+  }
+}
