--- a/src/components/sort/Sort.module.css
+++ b/src/components/sort/Sort.module.css
@@ -61,3 +61,19 @@
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 500px) {
+  .container {
+    width: 100px;
+    font-size: 10px;
+  }
+  .containerOptions {
+    font-size: 10px;
+    margin-left: 5px;
+  }
+  .default::after {
+    width: 12px;
+    height: 12px;
+    right: -8px;
+  }
+}
