--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -15,3 +15,23 @@
   margin-bottom: 10px;
   color: aquamarine;
 }
+
+@media (max-width: 1150px) {
+  .stats {
+    width: 300px;
+    margin-top: 0px;
+  }
+}
+
+@media (max-width: 700px) {
+  .stats {
+    width: 100%;
+  }
+}
+
+@media (max-width: 350px) {
+  .stats {
+    width: 300px;
+    margin: 0px 10px;
+  }
+}
