--- a/src/components/user-comments-list/UserCommentsList.module.css
+++ b/src/components/user-comments-list/UserCommentsList.module.css
@@ -21,3 +21,11 @@
 .btn:hover {
   box-shadow: 0px 0px 3px rgb(105, 209, 174);
 }
+
+@media (max-width: 1150px) {
+  .container {
+    width: 100%;
+    margin: auto;
+    margin-top: 70px;
+  }
+}
