--- a/src/components/user-info/UserInfo.module.css
+++ b/src/components/user-info/UserInfo.module.css
@@ -4,3 +4,14 @@
   justify-content: center;
   flex-direction: column;
 }
+
+@media (max-width: 1150px) {
+  .info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: auto;
+  }
+}
