--- a/src/components/wrapper/Wrapper.module.css
+++ b/src/components/wrapper/Wrapper.module.css
@@ -51,3 +51,49 @@
   height: 100%;
   object-fit: contain;
 }
+
+.dots {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 8px;
+  height: 200px;
+  position: absolute;
+  top: calc(50% - 100px);
+  right: 20px;
+  z-index: 6;
+}
+
+.dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.selected {
+  background-color: aquamarine;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    height: 400px;
+  }
+}
+@media (max-width: 750px) {
+  .container {
+    height: 350px;
+  }
+  .btnContainer {
+    width: 50px;
+  }
+}
+
+@media (max-width: 500px) {
+  .dots {
+    display: flex;
+  }
+  .btnContainer {
+    display: none;
+  }
+}
