--- a/src/components/multiRangeSlider/MultiRangeSlider.module.css
+++ b/src/components/multiRangeSlider/MultiRangeSlider.module.css
@@ -106,12 +106,32 @@
 @media (max-width: 500px) {
   .container {
     justify-content: flex-start;
+    margin-bottom: 0px;
   }
   .slider,
   .thumb {
-    width: 100px;
+    width: 170px;
   }
   .thumb::-webkit-slider-thumb {
+    width: 15px;
+    height: 15px;
+  }
+  @media (max-width: 370px) {
+    .slider,
+    .thumb {
+      width: 140px;
+    }
+    .thumb::-webkit-slider-thumb {
+      width: 12px;
+      height: 12px;
+    }
+    .slider__track,
+    .slider__range {
+      border-radius: 3px;
+      height: 4px;
+    }
+  }
+  /* .thumb::-webkit-slider-thumb {
     width: 9px;
     height: 9px;
   }
@@ -126,5 +146,5 @@
   }
   .slider__rightValue {
     font-size: 8px;
-  }
+  } */
 }
